feat(kafka): replace SQL dialect with REST ops and console
Align Kafka with the REST KafkaOps path: browse Topic/Group/Broker, fix
AdminClient unwrap across ClassLoaders, and wire frontend console plus
permissions menu. Drop sql-kafka and related command dialect code.